white space on right solved

--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@
     padding: 0;
 }
 
-body {
+body,
+html {
     background: #FCFCFC;
     overflow-x: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 #header {
